apps/server/kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-template-server-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: project-slug-production-ip # `production_ip_name` from Terraform output
spec:
  rules:
    - host: "https://project-slug.labrys.group" # `production_url` from Terraform output
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: repo-template-server
                port:
                  number: 80
